--- a/package.json
+++ b/package.json
@@ -6,21 +6,52 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint-staged": "pnpm lint && pnpm typecheck && pnpm format",
+    "prepare": "husky"
   },
   "dependencies": {
-    "react": "^18",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@trpc/client": "11.0.0-rc.522",
+    "@trpc/next": "11.0.0-rc.522",
+    "@trpc/react-query": "11.0.0-rc.522",
+    "@trpc/server": "11.0.0-rc.522",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "husky": "9.1.6",
+    "lucide-react": "^0.445.0",
+    "next": "14.2.13",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react": "^18",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@tanstack/eslint-plugin-query": "5.57.1",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13"
-  }
+    "eslint-config-next": "14.2.13",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "lint-staged": "15.2.8",
+    "postcss": "^8",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "packageManager": "pnpm@9.11.0"
 }
